--- a/pdf-compare.html
+++ b/pdf-compare.html
@@ -1,16 +1,59 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>PDF Comparison</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Compare two PDF files online with our fully responsive PDF comparison tool. Easy to use, fast, and SEO-optimized.">
+    <meta name="keywords" content="PDF compare, PDF comparison tool, online PDF tool, compare PDF files">
+    <meta name="author" content="Your Company Name">
+    <title>PDF Compare Tool - Compare Two PDF Files Online</title>
+    <link rel="stylesheet" href="pdf-compare.css">
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=YOUR_ADSENSE_ID" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>Upload PDFs for Comparison</h1>
-    <form action="/compare" method="post" enctype="multipart/form-data">
-        <label for="pdf1">First PDF:</label>
-        <input type="file" id="pdf1" name="pdf1" accept="application/pdf" required><br><br>
-        <label for="pdf2">Second PDF:</label>
-        <input type="file" id="pdf2" name="pdf2" accept="application/pdf" required><br><br>
-        <button type="submit">Compare</button>
-    </form>
+    <header>
+        <h1>PDF Compare Tool</h1>
+        <p>Upload two PDF files to compare them side by side.</p>
+    </header>
+
+    <main>
+        <!-- File Upload Section -->
+        <section id="upload-section">
+            <input type="file" id="file1" accept="application/pdf">
+            <input type="file" id="file2" accept="application/pdf">
+            <button id="compare-btn">Compare PDFs</button>
+        </section>
+
+        <!-- PDF Display Section -->
+        <section id="pdf-display">
+            <div id="pdf1-container"></div>
+            <div id="pdf2-container"></div>
+        </section>
+
+        <!-- Ad Section -->
+        <section id="ad-section">
+            <div class="ad-unit">
+                <!-- Google AdSense Ad Unit -->
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="YOUR_ADSENSE_ID"
+                     data-ad-slot="YOUR_AD_UNIT_ID"
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 Your Company Name. All rights reserved.</p>
+    </footer>
+
+    <!-- PDF.js Library -->
+    <script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script>
+    <script src="pdf-compare.js"></script>
 </body>
 </html>
